fix: alignment left in verify screen in mSite

--- a/src/component/MyAccountOverlayV1/MyAccountOverlay.style.scss
+++ b/src/component/MyAccountOverlayV1/MyAccountOverlay.style.scss
@@ -150,6 +150,7 @@
       display: grid;
 
       @include mobile() {
+        text-align: left;
         padding: 0px 30px;
       }
 
